--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+    <ion-list>
+     <ion-item *ngFor="let animal of animales">
+      <ion-avatar item >
+        <img [src]="animal.imagen">
+      </ion-avatar>
+      <h2>{{ animal.nombre }}</h2>
+      <p>Ugh. As if.</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
