--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,8 @@
 </ion-header>
 <ion-content>
     <ion-list>
-     <ion-item *ngFor="let animal of animales">
+     <ion-item *ngFor="let animal of animales"
+       (click)="reproducir( animal )">
       <ion-avatar item >
         <img [src]="animal.imagen">
       </ion-avatar>
